--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Whaling_docker Project
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Whaling_docker Project</title>
+</head>
+<body>
+    Hello, Docker !!
+    <form action="/" method="post">
+        <label for="coinPair">CoinPair</label>
+        <input id="coinPair" type="text" name="coinPair" placeholder="BTCUSDT">
+        <button type="submit">Go</button>
+    </form>
+</body>
+</html>
