dev delete container

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Whaling_docker Project</title>
     <!-- <link rel="stylesheet" type="text/css" href="/style.css"> -->
     <style>
+        h1 {
+            color: red;
+        }
         ul {
             list-style-type: none;
             padding: 0;
@@ -36,13 +39,21 @@
             font-weight: bold;
             margin-right: 5px; /* 키와 값 사이의 간격을 추가 */
         }
+        .bluepoint {
+            color: blue;
+        }
+        .blackpoint {
+            color: black;
+        }
     </style>
 </head>
 <body>
-    <h1>I am 도커 Container 입니다</h1>
+    <h1>I am <span class="bluepoint">도커</span> Container <span class="blackpoint">입니다</span></h1>
+    <h3>고래 잡은 횟수: <span id="deleted-container-count">0</span></h3>
     <ul id="container-list"></ul>
     <!-- <script type="text/javascript" src="/main.js"></script> -->
     <script>
+        let deletedContainerCount = localStorage.getItem('deletedContainerCount')
         // 컨테이너 리스트 조회
         async function fetchContainerList() {
             const containerListElement = document.getElementById('container-list');
@@ -50,22 +61,26 @@
             const response = await fetch('/containers');
             const data = await response.json();
             if (data) {
-                data.forEach((container) => {
-                const listItem = document.createElement('li');
-                listItem.innerHTML = `<div class="attribute"><span class="attribute-key">Name:</span> ${container.Names[0]}</div> <div class="attribute"><span class="attribute-key">Ports:</span> ${Object.values(container.Ports[0])}</div><div class="attribute"><span class="attribute-key">Image:</span> ${container.Image}</div> <div class="attribute"><span class="attribute-key">State:</span> ${container.State}</div> <div class="attribute"><span class="attribute-key">Status:</span> ${container.Status}</div>`;
-                // Delete 버튼 생성
-                const button = document.createElement('button');
-                button.textContent = 'Delete';
-                button.addEventListener('click', async () => {
-                    const success = await deleteContainer(container.Id);
-                    if (success) {
-                        alert(`Container ${container.Id} deleted successfully.`);
-                        fetchContainerList();
-                        location.reload(); // 삭제 성공 -> 목록 업데이트
-                    }
-                });
-                listItem.appendChild(button);
-                containerListElement.appendChild(listItem);
+                data.forEach(async (container) => {
+                    const listItem = document.createElement('li');
+                    const cpuMemoryInfo = await fetchContainerStats(container.Id);
+                    listItem.innerHTML = `<div class="attribute"><span class="attribute-key">Name:</span> ${container.Names[0].substring(1)}</div> <div class="attribute"><span class="attribute-key">Image:</span> ${container.Image}</div> <div class="attribute"><span class="attribute-key">State:</span> ${container.State}</div> <div class="attribute"><span class="attribute-key">Status:</span> ${container.Status}</div> <div class="attribute"><span class="attribute-key">CPU Usage:</span> ${cpuMemoryInfo.cpuUsageTotal}</div> <div class="attribute"><span class="attribute-key">Memory Usage:</span> ${cpuMemoryInfo.memoryUsage}</div>`;
+                    // Delete 버튼 생성
+                    const button = document.createElement('button');
+                    button.textContent = '꺼줘';
+                    button.addEventListener('click', async () => {
+                        const confirmDelete = confirm('고래를 잡으시겠습니까 ??');
+                        if (confirmDelete) {
+                            const success = await deleteContainer(container.Id);
+                            deletedContainerCount++; // 컨테이너가 삭제되면 카운트
+                            localStorage.setItem('deletedContainerCount', deletedContainerCount);
+                            document.getElementById('deleted-container-count').textContent = deletedContainerCount; 
+                            alert(`Container ${container.Names[0].substring(1)} deleted successfully !!`);
+                            location.reload(); // 삭제 성공 -> 목록 업데이트
+                        }
+                    });
+                    listItem.appendChild(button);
+                    containerListElement.appendChild(listItem);
                 });
             } else {
                 console.error('Failed to retrieve container list.');
@@ -75,6 +90,23 @@
             }
         }
     
+        async function fetchContainerStats(containerId) {
+            try {
+                const response = await fetch(`/containers/${containerId}/stat`);
+                const stat_data = await response.json();
+
+                if (response.status === 200) {
+                    const cpuUsageTotal = stat_data.cpu_stats.cpu_usage.total_usage;
+                    const memoryUsage = stat_data.memory_stats.usage;
+                    return { cpuUsageTotal, memoryUsage };
+                } else {
+                    console.error('Failed to fetch container stats');
+                }
+            } catch (error) {
+                console.error('An error occurred:', error);
+            }
+        }
+
         async function deleteContainer(containerId) {
             try {
             const response = await fetch('/containers/delete', {
@@ -99,6 +131,7 @@
         }
     
         fetchContainerList();
+        document.getElementById('deleted-container-count').textContent = deletedContainerCount;
     </script>
 </body>
 </html>
