--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="con1">
         <h1>I am <span class="bluepoint">도커</span> Container <span class="blackpoint">입니다</span></h1>
-        <h3>오늘 고래 잡은 횟수 : <span id="deleted-container-count">0</span></h3>
+        <h3>고래 잡은 횟수 : <span id="deleted-container-count">0</span></h3>
         <button id="list-button">
             <span class="hover-text">Whaling</span>
         </button>
